--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                 <h1>Hey, I am Shubham 👋</h1>
                 <article>
                     <p>
-                        I'm a <strong>Full Stack Developer</strong> (PHP backend) with a focus on creating and designing exceptional digital experiences that are fast, accessible, visually appealing, responsive, and feature-rich. I have been into programming for over <strong>3 years</strong>, and counting ♾️.
+                        I'm a <strong>Full Stack Developer</strong> with a focus on creating and designing exceptional digital experiences that are fast, accessible, visually appealing, responsive, and feature-rich. I have been into programming for over <strong>3 years</strong>, and counting ♾️.
                     </p>
                     <p>
                         I'm a Highly motivated and results-oriented computer science engineering graduate with a passion for building innovative software solutions.  I possess strong skills in  various programming languages including <strong>Java</strong>, <strong>Python</strong>, <strong>C</strong>, <strong>C++</strong>, <strong>HTML</strong>, <strong>CSS</strong>, <strong>JavaScript</strong>, <strong>MySQL</strong> and <strong>PHP</strong>. I love making projects, and solving problems, programming is ❤️.
@@ -92,14 +92,14 @@
                     <h3>Wanna know about me? Here's the gist:</h3>
                     <article id="about-content">
                         <p>
-                            I'm a passionate, workaholic Full Stack Developer, who is well versed with Web Development technologies like <strong>HTML</strong>, <strong>CSS</strong>, <strong>JavaScript</strong>, <strong>PHP</strong>, <strong>MySQL</strong>, and Programming Languages like <strong>Java</strong> (Core, with frameworks like <strong>Swing</strong>, utilities like <strong>JDBC</strong>), <strong>Python</strong>, <strong>C++</strong> and <strong>C</strong>, and tools like <strong>Git</strong>, <strong>Github</strong>, <strong>Linux</strong>, with a knack of problem solving using <strong>Data Structures and Algorithms</strong>.
+                            I'm a passionate, workaholic Full Stack Developer, who is well versed with Web Development technologies like <strong>HTML</strong>, <strong>CSS</strong>, <strong>JavaScript</strong>, <strong>React JS</strong>, <strong>PHP</strong>, <strong>MySQL</strong>, <strong>Firebase</strong>, <strong>JQuery</strong>, <strong>AJAX</strong>, and Programming Languages like <strong>Java</strong> (Core, with frameworks like <strong>Swing</strong>, utilities like <strong>JDBC</strong>), <strong>Python</strong>, <strong>C++</strong> and <strong>C</strong>, and tools like <strong>Git</strong>, <strong>Github</strong>, <strong>Linux</strong>, with a knack of problem solving using <strong>Data Structures and Algorithms</strong>.
                         </p>
                         <p>
                             I am enthusiastic about bringing the technical and visual aspects of digital products to life. What matters to me is user experience, pixel perfect design, creating feature loaded user-centered applications, and writing clear, readable, high performant code.
                             I began my programming journey in early 2021, and since then I've continued to grow and evolve as a developer, taking on new challenges and learning the latest technologies along the way
                         </p>
                         <p>  
-                            I am currently doing open-source contributions in web related projects, along with creating some exciting projects along with learning frameworks like <strong>BootStrap</strong>, <strong>JQuery</strong>, and <strong>AJAX</strong>, and also learning latest technologies like <strong>React JS</strong>, <strong>Node JS</strong>, <strong>Express JS</strong> and <strong>Mongo DB</strong>, and <strong>Java Backend Technologies</strong> like <strong>JSP Servlet</strong>, <strong>Spring</strong>, <strong>SpringBoot</strong> and <strong>Hibernate</strong> for creating scalable, efficient, and reliable products.
+                            I am currently doing open-source contributions in web related projects, along with creating some exciting projects along with learning frameworks like <strong>BootStrap</strong>, <strong>JQuery</strong>, and <strong>AJAX</strong>, and also learning latest technologies like <strong>React JS</strong>, <strong>Node JS</strong>, <strong>Express JS</strong> and <strong>Mongo DB</strong>, and <strong>Java Backend Technologies</strong> like <strong>JSP and Servlets</strong>, <strong>Spring</strong>, <strong>SpringBoot</strong> and <strong>Hibernate</strong> for creating scalable, efficient, and reliable products.
                         </p>
                         <p>
                             I am a quick learner, progressive thinker and I am always eager to learn new technologies, I enjoy working on products end to end, from ideation all the way to development.
@@ -132,7 +132,7 @@
         <h3>The Skills and Technologies I am really good at:</h3>
         <div class="grid-container">
             <div class="column-flex-container flex-center">
-                <img class="skills-img" src="./images/skills_icons/HTML.svg" alt="">
+                <img class="skills-img" src="./images/skills_icons/HTML.svg" alt="" style="width: 3.5rem;">
                 <div>HTML</div>
             </div>
             <div class="column-flex-container flex-center">
@@ -140,16 +140,44 @@
                 <div>CSS</div>
             </div>
             <div class="column-flex-container flex-center">
-                <img class="skills-img" src="./images/skills_icons/javascript.svg" alt="">
+                <img class="skills-img" src="./images/skills_icons/JavaScript.svg" alt="">
                 <div>JavaScript</div>
+            </div>
+            <div class="column-flex-container flex-center">
+                <img class="skills-img" src="./images/skills_icons/ReactJS.svg" alt="">
+                <div>React JS</div>
+            </div>
+            <div class="column-flex-container flex-center">
+                <img class="skills-img" src="./images/skills_icons/TailwindCSS.svg" alt="">
+                <div>Tailwind CSS</div>
+            </div>
+            <div class="column-flex-container flex-center">
+                <img class="skills-img" src="./images/skills_icons/Bootstrap.svg" alt="">
+                <div>Bootstrap</div>
             </div>
             <div class="column-flex-container flex-center">
                 <img class="skills-img" src="./images/skills_icons/PHP.svg" alt="">
                 <div>PHP</div>
             </div>
             <div class="column-flex-container flex-center">
+                <img class="skills-img" src="./images/skills_icons/JSP.svg" alt="" style="filter: invert(100%); color: white;">
+                <div>JSP and Servlets</div>
+            </div>
+            <div class="column-flex-container flex-center">
+                <img class="skills-img" src="./images/skills_icons/JQuery.svg" alt="">
+                <div>JQuery</div>
+            </div>
+            <div class="column-flex-container flex-center">
+                <img class="skills-img" src="./images/skills_icons/AJAX.ico" alt="">
+                <div>AJAX</div>
+            </div>
+            <div class="column-flex-container flex-center">
                 <img class="skills-img" src="./images/skills_icons/MySQL.svg" alt="">
                 <div>MySQL</div>
+            </div>
+            <div class="column-flex-container flex-center">
+                <img class="skills-img" src="./images/skills_icons/Firebase.svg" alt="">
+                <div>Firebase</div>
             </div>
             <div class="column-flex-container flex-center">
                 <img class="skills-img" src="./images/skills_icons/Java.svg" alt="">
@@ -164,7 +192,7 @@
                 <div>DSA</div>
             </div>
             <div class="column-flex-container flex-center">
-                <img class="skills-img" src="./images/skills_icons/git.svg" alt="">
+                <img class="skills-img" src="./images/skills_icons/Git.svg" alt="">
                 <div>Git</div>
             </div>
             <div class="column-flex-container flex-center">
@@ -178,6 +206,10 @@
             <div class="column-flex-container flex-center">
                 <img class="skills-img" src="./images/skills_icons/Linux.svg" alt="">
                 <div>Linux</div>
+            </div>
+            <div class="column-flex-container flex-center">
+                <img class="skills-img" src="./images/skills_icons/ShellProgramming.svg" alt="">
+                <div>Shell Programming</div>
             </div>
         </div>
     </section>
@@ -199,7 +231,7 @@
                     <li class="show-list-style">Resolved issues in repositories with a success rate of 100%, and a merge rate of 100%.</li>
                 </ul>
             </div>
-            <p class="experience-timeline">May 2024 - Present</p>
+            <p class="experience-timeline">May 2024 - August 2024</p>
         </div>
     </section>
     <!-- projects -->
@@ -210,6 +242,40 @@
             </span>
         </h2>
         <h3>Some of the Noteworthy Projects that I have built:</h3>
+        <div class="projects-container row-flex-container">
+            <div class="project-preview-container">
+                <img class="project-preview-image" src="./images/preview-chitthi.png" alt="preview-chitthi" style="border: solid 5px black;">
+            </div>
+            <div class="project-details-container">
+                <h3>Chitthi</h3>
+                <p>
+                    <ul>
+                        <li class="show-list-style">
+                            <strong>Feature-Rich Chat Application:</strong>
+                            Developed a chat application with a responsive UI, PWA support, real-time messaging, user profiles, last seen time, themes, and search, enhancing usability and interaction.
+                        </li>
+                        <li class="show-list-style">
+                            <strong>Real-Time Safety Features:</strong>
+                            Integrated live location and speed tracking with SOS alerts, allowing users to share their location selectively, leveraging Google Maps API and Firebase for secure and seamless functionality.
+                        </li>
+                        <li class="show-list-style">
+                            <strong>Scalable Notification Service:</strong>
+                            Built a notification service using Express JS and Firebase Cloud Messaging, enabling multicast across devices and leveraging service workers for instant pop-up alerts, ensuring fast and reliable communication.
+                        </li>
+                    </ul>
+                </p>                
+                <div class="project-tech-stack-container">
+                    <span>React JS</span>
+                    <span>Tailwind CSS</span>
+                    <span>Firebase</span>
+                    <span>Express JS</span>
+                    <span>Google Maps API</span>
+                </div>
+                <a class="external-link" href="https://chitthi.web.app/">
+                    <img class="external-link-image" src="./images/external-link-icon.svg" alt="external-link-image">
+                </a>
+            </div>
+        </div>
         <div class="projects-container row-flex-container">
             <div class="project-preview-container">
                 <img class="project-preview-image" src="./images/preview-quora_clone.png" alt="preview-quora_clone">
@@ -255,7 +321,7 @@
                 <img class="project-preview-image" src="./images/preview-justnote.png" alt="preview-justnote">
             </div>
             <div class="project-details-container">
-                <h3>JustNote - Notepad Application</h3>
+                <h3>JustNote</h3>
                 <p>
                     <ul>
                         <li class="show-list-style">
@@ -379,6 +445,27 @@
             </h4>
             <div>Founder - C Institute</div>
             <div>Co-Founder - Pitsol.in</div>
+        </div>
+        <div class="testimonial-container column-flex-container flex-center">
+            <img class="testimonial-giver-image" src="./images/testimonial_2_profile_pic.bmp" alt="testimonial-giver-image">
+            <div class="testimonial-content">
+                <p>
+                    "I had the pleasure of working with Shubham on our ZedPlus smart barrier project, where he managed the backend development with remarkable skill and efficiency. His expertise in backend development, database management, and system architecture was pivotal to our platform’s success.
+                </p>
+                <p>
+                    Shubham consistently met project deadlines and displayed a high level of professionalism, ensuring seamless integration and reliability in our connected platform.
+                </p>
+                <p>
+                    Beyond his technical abilities, Shubham is also a great friend. His collaborative spirit and problem-solving approach made him a joy to work with, and his dedication brought out the best in our team. I highly recommend Shubham for any role that values technical expertise, commitment, and teamwork."
+                </p> 
+            </div>
+            <h4>
+                <span class="testimonial-giver-name">Karan Soni</span>
+                <a href="https://www.linkedin.com/in/karansoni3d">
+                    <img class="external-link-image" src="./images/external-link-icon.svg" alt="external-link-image">
+                </a>
+            </h4>
+            <div>Animations and PR Head - ZedPlus</div>
         </div>
     </section>
     <!-- contact -->
